--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "mysql2": "^1.7.0",
     "sequelize": "^5.18.1"
   },
